# aldar

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  text.txt
.claude/agents/: clerk-expert.md  database-expert.md  debugging-expert.md  devops-expert.md  llm-expert.md  nextjs-expert.md  python-expert.md  stripe-expert.md  testing-expert.md  ux-ui-expert.md
.claude/commands/: agent.md  nextjs-builder.md  plan-executor.md  plan-preparer.md  prd-builder.md  quick-executor.md  squad-review.md  vision-planner.md
.workshop/tasks/init-fastmcp-server-sql/: context.md  plan.md  tasks.md
sql_mcp_server/: __init__.py  models.py  server.py  sql_executor.py
