[project]
name = "sql-mcp-server"
version = "0.1.0"
description = "MCP server for executing SQL queries against any SQLAlchemy-supported database"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
]

[project.scripts]
sql-mcp-server = "sql_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sql_mcp_server"]
